[package]
name = "mail_newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mail_newsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
config = "0.13.3"
serde = { version = "1.0.163", features = ["derive"] }
tokio = "1.28.2"

[dev-dependencies]
reqwest = "0.11.18"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
